# web-wire

./: .gitignore  CMakeLists.txt  README.md  consolelistener.cpp  consolelistener.h  default_css.cpp  default_css.h  devtoolswindow.cpp  devtoolswindow.h  execjs.cpp  execjs.h  main.cpp  readlineinthread.cpp  readlineinthread.h  webwire.h  webwirehandler.cpp  webwirehandler.h  webwirepage.cpp  webwirepage.h  webwireprofile.cpp  webwireprofile.h  webwireview.cpp  webwireview.h  webwirewindow.cpp  webwirewindow.h
test/: dialog.html  inner1.html  styles.css  test1.html  test2.html
